<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:focusableInTouchMode="true">

    <!-- the last three lines prevent the Edittext from being selected all the time.
    Thus the app won't jump to the Edittext, after changing the orientation
    -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/marginMedium"
        android:background="@color/colorPrimaryDark"
        android:clickable="true"
        android:focusable="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_gray"
            android:gravity="center_horizontal"
            android:padding="@dimen/marginSmall"
            android:text="@string/welcome"
            android:textSize="@dimen/titleSize"
            android:textStyle="bold" />

        <View style="@style/BlackLine" />

        <EditText
            android:id="@+id/nameField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:hint="@string/enterName"
            android:imeOptions="flagNoFullscreen"
            android:inputType="textCapWords"
            android:paddingBottom="@dimen/marginSmall"
            android:paddingLeft="@dimen/marginSmall"
            android:paddingRight="@dimen/marginSmall"
            android:paddingStart="@dimen/marginSmall"
            android:paddingTop="@dimen/marginSmall"
            android:textSize="@dimen/questionTagSize" />

        <!-- First Question -->
        <LinearLayout style="@style/QuestionLinearLayout">

            <TextView
                style="@style/QuestionHeadline"
                android:text="@string/question1Tag" />

            <View style="@style/BlackLine" />

            <ImageView
                style="@style/Image"
                android:src="@drawable/mostselledever" />

            <View style="@style/BlackLine" />

            <TextView
                style="@style/Question"
                android:text="@string/question1" />

            <View style="@style/BlackLine" />

            <RadioGroup
                android:id="@+id/question1"
                style="@style/RadioGroupStyle">

                <RadioButton
                    android:id="@+id/question1a"
                    style="@style/MatchParentWidthAndHeight"
                    android:text="@string/answerq1a" />

                <View style="@style/DarkGrayLine" />

                <RadioButton
                    android:id="@+id/question1b"
                    style="@style/MatchParentWidthAndHeight"
                    android:text="@string/answerq1b" />

                <View style="@style/DarkGrayLine" />

                <RadioButton
                    android:id="@+id/question1c"
                    style="@style/MatchParentWidthAndHeight"
                    android:text="@string/answerq1c" />

                <View style="@style/DarkGrayLine" />

                <RadioButton
                    android:id="@+id/question1d"
                    style="@style/MatchParentWidthAndHeight"
                    android:text="@string/answerq1d" />

            </RadioGroup>
        </LinearLayout>

        <!-- Second Question -->
        <LinearLayout style="@style/QuestionLinearLayout">

            <TextView
                style="@style/QuestionHeadline"
                android:text="@string/question2Tag" />

            <View style="@style/BlackLine" />

            <ImageView
                style="@style/Image"
                android:src="@drawable/mostelledpc" />

            <View style="@style/BlackLine" />

            <TextView
                style="@style/Question"
                android:text="@string/question2" />

            <View style="@style/BlackLine" />

            <RadioGroup
                android:id="@+id/question2"
                style="@style/RadioGroupStyle">

                <RadioButton
                    android:id="@+id/question2a"
                    style="@style/MatchParentWidthAndHeight"
                    android:text="@string/answerq2a" />

                <View style="@style/DarkGrayLine" />

                <RadioButton
                    android:id="@+id/question2b"
                    style="@style/MatchParentWidthAndHeight"
                    android:text="@string/answerq2b" />

                <View style="@style/DarkGrayLine" />

                <RadioButton
                    android:id="@+id/question2c"
                    style="@style/MatchParentWidthAndHeight"
                    android:text="@string/answerq2c" />

                <View style="@style/DarkGrayLine" />

                <RadioButton
                    android:id="@+id/question2d"
                    style="@style/MatchParentWidthAndHeight"
                    android:text="@string/answerq2d" />

            </RadioGroup>
        </LinearLayout>

        <!-- Third Question -->
        <LinearLayout style="@style/QuestionLinearLayout">

            <TextView
                style="@style/QuestionHeadline"
                android:text="@string/question3Tag" />

            <View style="@style/BlackLine" />

            <ImageView
                style="@style/Image"
                android:src="@drawable/peach" />

            <View style="@style/BlackLine" />

            <TextView
                style="@style/Question"
                android:text="@string/question3" />

            <View style="@style/BlackLine" />

            <RadioGroup
                android:id="@+id/question3"
                style="@style/RadioGroupStyle">

                <RadioButton
                    android:id="@+id/question3a"
                    style="@style/MatchParentWidthAndHeight"
                    android:text="@string/answerq3a" />

                <View style="@style/DarkGrayLine" />

                <RadioButton
                    android:id="@+id/question3b"
                    style="@style/MatchParentWidthAndHeight"
                    android:text="@string/answerq3b" />

                <View style="@style/DarkGrayLine" />

                <RadioButton
                    android:id="@+id/question3c"
                    style="@style/MatchParentWidthAndHeight"
                    android:text="@string/answerq3c" />

                <View style="@style/DarkGrayLine" />

                <RadioButton
                    android:id="@+id/question3d"
                    style="@style/MatchParentWidthAndHeight"
                    android:text="@string/answerq3d" />

            </RadioGroup>
        </LinearLayout>

        <!-- Fourth Question -->
        <LinearLayout style="@style/QuestionLinearLayout">

            <TextView
                style="@style/QuestionHeadline"
                android:text="@string/question4Tag" />

            <View style="@style/BlackLine" />

            <ImageView
                style="@style/Image"
                android:src="@drawable/nintendo" />

            <View style="@style/BlackLine" />

            <TextView
                style="@style/Question"
                android:text="@string/question4" />

            <View style="@style/BlackLine" />

            <RadioGroup
                android:id="@+id/question4"
                style="@style/RadioGroupStyle">

                <RadioButton
                    android:id="@+id/question4a"
                    style="@style/MatchParentWidthAndHeight"
                    android:text="@string/answerq4a" />

                <View style="@style/DarkGrayLine" />

                <RadioButton
                    android:id="@+id/question4b"
                    style="@style/MatchParentWidthAndHeight"
                    android:text="@string/answerq4b" />

                <View style="@style/DarkGrayLine" />

                <RadioButton
                    android:id="@+id/question4c"
                    style="@style/MatchParentWidthAndHeight"
                    android:text="@string/answerq4c" />

                <View style="@style/DarkGrayLine" />

                <RadioButton
                    android:id="@+id/question4d"
                    style="@style/MatchParentWidthAndHeight"
                    android:text="@string/answerq4d" />

            </RadioGroup>
        </LinearLayout>

        <!-- Fifth Question -->
        <LinearLayout style="@style/QuestionLinearLayout">

            <TextView
                style="@style/QuestionHeadline"
                android:text="@string/question5Tag" />

            <View style="@style/BlackLine" />

            <ImageView
                style="@style/Image"
                android:src="@drawable/creeper" />

            <View style="@style/BlackLine" />

            <TextView
                style="@style/Question"
                android:text="@string/question5" />

            <View style="@style/BlackLine" />

            <RadioGroup
                android:id="@+id/question5"
                style="@style/RadioGroupStyle">

                <RadioButton
                    android:id="@+id/question5a"
                    style="@style/MatchParentWidthAndHeight"
                    android:text="@string/answerq5a" />

                <View style="@style/DarkGrayLine" />

                <RadioButton
                    android:id="@+id/question5b"
                    style="@style/MatchParentWidthAndHeight"
                    android:text="@string/answerq5b" />

                <View style="@style/DarkGrayLine" />

                <RadioButton
                    android:id="@+id/question5c"
                    style="@style/MatchParentWidthAndHeight"
                    android:text="@string/answerq5c" />

                <View style="@style/DarkGrayLine" />

                <RadioButton
                    android:id="@+id/question5d"
                    style="@style/MatchParentWidthAndHeight"
                    android:text="@string/answerq5d" />

            </RadioGroup>
        </LinearLayout>

        <!-- Sixth Question -->
        <LinearLayout style="@style/QuestionLinearLayout">

            <TextView
                style="@style/QuestionHeadline"
                android:text="@string/question6Tag" />

            <View style="@style/BlackLine" />

            <ImageView
                style="@style/Image"
                android:src="@drawable/rocketleague" />

            <View style="@style/BlackLine" />

            <TextView
                style="@style/Question"
                android:text="@string/question6" />

            <View style="@style/BlackLine" />

            <RadioGroup
                android:id="@+id/question6"
                style="@style/RadioGroupStyle">

                <RadioButton
                    android:id="@+id/question6a"
                    style="@style/MatchParentWidthAndHeight"
                    android:text="@string/answerq6a" />

                <View style="@style/DarkGrayLine" />

                <RadioButton
                    android:id="@+id/question6b"
                    style="@style/MatchParentWidthAndHeight"
                    android:text="@string/answerq6b" />

                <View style="@style/DarkGrayLine" />

                <RadioButton
                    android:id="@+id/question6c"
                    style="@style/MatchParentWidthAndHeight"
                    android:text="@string/answerq6c" />

                <View style="@style/DarkGrayLine" />

                <RadioButton
                    android:id="@+id/question6d"
                    style="@style/MatchParentWidthAndHeight"
                    android:text="@string/answerq6d" />

            </RadioGroup>
        </LinearLayout>

        <!-- Seventh Question -->
        <LinearLayout style="@style/QuestionLinearLayout">

            <TextView
                style="@style/QuestionHeadline"
                android:text="@string/question7Tag" />

            <View style="@style/BlackLine" />

            <ImageView
                style="@style/Image"
                android:src="@drawable/blizzard" />

            <View style="@style/BlackLine" />

            <TextView
                style="@style/Question"
                android:text="@string/question7" />

            <View style="@style/BlackLine" />

            <RadioGroup
                android:id="@+id/question7"
                style="@style/RadioGroupStyle">

                <RadioButton
                    android:id="@+id/question7a"
                    style="@style/MatchParentWidthAndHeight"
                    android:text="@string/answerq7a" />

                <View style="@style/DarkGrayLine" />

                <RadioButton
                    android:id="@+id/question7b"
                    style="@style/MatchParentWidthAndHeight"
                    android:text="@string/answerq7b" />

                <View style="@style/DarkGrayLine" />

                <RadioButton
                    android:id="@+id/question7c"
                    style="@style/MatchParentWidthAndHeight"
                    android:text="@string/answerq7c" />

                <View style="@style/DarkGrayLine" />

                <RadioButton
                    android:id="@+id/question7d"
                    style="@style/MatchParentWidthAndHeight"
                    android:text="@string/answerq7d" />

            </RadioGroup>
        </LinearLayout>

        <!-- Eigth Question -->
        <LinearLayout style="@style/QuestionLinearLayout">

            <TextView
                style="@style/QuestionHeadline"
                android:text="@string/question8Tag" />

            <View style="@style/BlackLine" />

            <ImageView
                style="@style/Image"
                android:src="@drawable/lol" />

            <View style="@style/BlackLine" />

            <TextView
                style="@style/Question"
                android:text="@string/question8" />

            <View style="@style/BlackLine" />

            <RadioGroup
                android:id="@+id/question8"
                style="@style/RadioGroupStyle">

                <RadioButton
                    android:id="@+id/question8a"
                    style="@style/MatchParentWidthAndHeight"
                    android:text="@string/answerq8a" />

                <View style="@style/DarkGrayLine" />

                <RadioButton
                    android:id="@+id/question8b"
                    style="@style/MatchParentWidthAndHeight"
                    android:text="@string/answerq8b" />

                <View style="@style/DarkGrayLine" />

                <RadioButton
                    android:id="@+id/question8c"
                    style="@style/MatchParentWidthAndHeight"
                    android:text="@string/answerq8c" />

                <View style="@style/DarkGrayLine" />

                <RadioButton
                    android:id="@+id/question8d"
                    style="@style/MatchParentWidthAndHeight"
                    android:text="@string/answerq8d" />

            </RadioGroup>
        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/marginBig"
            android:onClick="checkAnswers"
            android:text="@string/check" />

        <!-- Summary -->
        <TextView
            android:id="@+id/summaryTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_gray"
            android:gravity="center_horizontal"
            android:paddingTop="@dimen/marginSmall"
            android:paddingBottom="@dimen/marginSmall"
            android:text="@string/summary"
            android:textAllCaps="true"
            android:textSize="@dimen/questionTagSize"
            android:textStyle="bold"
            android:visibility="invisible" />

        <View
            android:id="@+id/summaryLine"
            style="@style/BlackLine"
            android:visibility="invisible" />

        <LinearLayout
            android:id="@+id/summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/marginBig"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:paddingLeft="@dimen/marginSmall"
            android:paddingRight="@dimen/marginSmall"
            android:visibility="invisible">

            <TextView
                android:id="@+id/summaryQuestion1"
                style="@style/QuestionSummary" />

            <View style="@style/DarkGrayLine" />

            <TextView
                android:id="@+id/summaryQuestion2"
                style="@style/QuestionSummary" />

            <View style="@style/DarkGrayLine" />

            <TextView
                android:id="@+id/summaryQuestion3"
                style="@style/QuestionSummary" />

            <View style="@style/DarkGrayLine" />

            <TextView
                android:id="@+id/summaryQuestion4"
                style="@style/QuestionSummary" />

            <View style="@style/DarkGrayLine" />

            <TextView
                android:id="@+id/summaryQuestion5"
                style="@style/QuestionSummary" />

            <View style="@style/DarkGrayLine" />

            <TextView
                android:id="@+id/summaryQuestion6"
                style="@style/QuestionSummary" />

            <View style="@style/DarkGrayLine" />

            <TextView
                android:id="@+id/summaryQuestion7"
                style="@style/QuestionSummary" />

            <View style="@style/DarkGrayLine" />

            <TextView
                android:id="@+id/summaryQuestion8"
                style="@style/QuestionSummary" />

        </LinearLayout>

        <Button
            android:id="@+id/shareButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/marginBig"
            android:onClick="shareResult"
            android:text="@string/share"
            android:visibility="invisible" />
    </LinearLayout>
</ScrollView>